<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/header_lay"
        layout="@layout/inflate_header_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_lay"
        android:background="@color/white">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/basic_edit_saveBtn"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileNameEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileEmailEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"

                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileMobileEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="10"

                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileDOBEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dob"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileAddressEDT"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/address"
                        android:imeOptions="actionNext"

                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileNationalityEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nationality"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileBirthPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthPlace"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileAadharNoTXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/aadharno"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="12"
                        android:textColor="@color/black"

                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileInterestEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/interest"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"

                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileHobbyEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hobby"
                        android:imeOptions="actionDone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </ScrollView>

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/singup_pg"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            app:buttonColor="@color/colorAccentTrans"
            app:buttonText="@string/signup"
            app:buttonTextSize="20sp"
            app:failedColor="@color/red"
            app:progressStyle="progress"
            app:succeedColor="@color/blue" />

        <Button
            android:id="@+id/basic_edit_saveBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selectore_sigup"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>
