<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/header_lay"
        layout="@layout/inflate_header_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <RelativeLayout
        android:id="@+id/header1_lay"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <ImageView
            android:id="@+id/editbackim"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Edit Profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/profileMergeSaveBTN"
        android:layout_below="@+id/header_lay"
        android:background="@color/white">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profilemergeNameEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileEmailEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profilepwdEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profilemergeMobileEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profilemergeDOBEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dob"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profilemergeQualificationEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/qualification"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileMergeExpEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/experience"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profileMergeSkillEDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/skills"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profilemergeAddressEDT"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/address"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyStyleEd">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/profilemergePortfolioEDT"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/portfolio"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/singup_pg"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            app:buttonColor="@color/colorAccentTrans"
            app:buttonText="@string/signup"
            app:buttonTextSize="20sp"
            app:failedColor="@color/red"
            app:progressStyle="progress"
            app:succeedColor="@color/blue" />


    </RelativeLayout>

    <Button
        android:id="@+id/profileMergeSaveBTN"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selectore_sigup"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="20sp" />
</RelativeLayout>
